sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:14: error: Unmatched closing brace '}' ignored here
    setValeur(j,v)}}
                   ^